// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card loading state 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  border-bottom-color: black;
  border-bottom-width: 0px;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c2 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c3 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0;
  min-width: 100%;
  min-height: 84px;
}

<style>
.IS1 {
  max-width: 25%;
  max-height: 50%;
}

.IS2 {
  max-width: 25%;
  max-height: 50%;
}

.IS3 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS4 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS5 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS6 {
  padding-bottom: 150%;
}

.IS7 {
  flex: 1;
  max-width: 320;
}

.IS8 {
  flex: 1;
  max-width: 320;
}

.IS9 {
  flex: 1;
  max-width: 320;
}

.IS10 {
  background-image: linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%);
  height: 24px;
  margin-bottom: 10px;
  max-width: 300px;
}

.IS11 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS12 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS13 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
  height: 10px;
  margin-bottom: 10px;
}

.IS14 {
  height: 10;
  margin-bottom: 10px;
}

.IS15 {
  height: 10;
  margin-bottom: 10px;
}

.IS16 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
  height: 10px;
  margin-bottom: 10px;
}

.IS17 {
  height: 10;
  margin-bottom: 10px;
}

.IS18 {
  height: 10;
  margin-bottom: 10px;
}

.IS19 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
  height: 10px;
  margin-bottom: 0px;
  max-width: 240px;
}

.IS20 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS21 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS22 {
  align-items: flex-start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
}

.IS23 {
  align-items: flex-start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
}

.IS24 {
  align-items: flex-start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
}
</style>

<Animations__FadeIn>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Animations__FadeIn-w31u4-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:",
            [Function],
            ";border-bottom-color:",
            [Function],
            ";border-bottom-width:",
            [Function],
            ";border-radius:",
            [Function],
            ";overflow:",
            [Function],
            ";height:",
            [Function],
            ";width:",
            [Function],
            ";margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            "animation:",
            Keyframes {
              "id": "sc-keyframes-eMLfYp",
              "inject": [Function],
              "name": "eMLfYp",
              "rules": Array [
                "@-webkit-keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
                "@keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
              ],
              "toString": [Function],
            },
            " 0.3s ease-in-out;",
          ],
        },
        "displayName": "Animations__FadeIn",
        "foldedComponentIds": Array [
          "TsTcView-sc-154dp5w-0",
        ],
        "render": [Function],
        "styledComponentId": "Animations__FadeIn-w31u4-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <tc-view__TcView
        className="IS24"
      >
        <StyledComponent
          className="IS23"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-view__TcView-nuazoi-0",
                "isStatic": true,
                "lastClassName": "c1",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                ],
              },
              "displayName": "tc-view__TcView",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-view__TcView-nuazoi-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c1 IS22"
          >
            <tc-view__TcView
              className="IS9"
            >
              <StyledComponent
                className="IS8"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "tc-view__TcView-nuazoi-0",
                      "isStatic": true,
                      "lastClassName": "c1",
                      "rules": Array [
                        "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                      ],
                    },
                    "displayName": "tc-view__TcView",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "tc-view__TcView-nuazoi-0",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1 IS7"
                >
                  <TimesImage
                    aspectRatio={0.6666666666666666}
                    disablePlaceholder={false}
                    fadeImageIn={false}
                    highResSize={800}
                    lowResQuality={null}
                    lowResSize={60}
                    rounded={false}
                    uri="https://img.io/img"
                  />
                </div>
              </StyledComponent>
            </tc-view__TcView>
            <card-content__TcCardContainer
              className=""
              styles={
                Object {
                  "flex": 1,
                  "marginBottom": 0,
                  "minHeight": 84,
                  "minWidth": "100%",
                }
              }
            >
              <StyledComponent
                className=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "card-content__TcCardContainer-sc-1w0wvq8-0",
                      "isStatic": false,
                      "lastClassName": "c4",
                      "rules": Array [
                        "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "card-content__TcCardContainer",
                    "foldedComponentIds": Array [
                      "tc-view__TcView-nuazoi-0",
                    ],
                    "render": [Function],
                    "styledComponentId": "card-content__TcCardContainer-sc-1w0wvq8-0",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                styles={
                  Object {
                    "flex": 1,
                    "marginBottom": 0,
                    "minHeight": 84,
                    "minWidth": "100%",
                  }
                }
              >
                <div
                  className="c4"
                >
                  <_default>
                    <Gradient
                      className="IS12"
                      degrees={264}
                      endPoint="1"
                      startPoint="0"
                    />
                    <Gradient
                      className="IS15"
                      degrees={267}
                      endPoint="1"
                      startPoint="0"
                    />
                    <Gradient
                      className="IS18"
                      degrees={267}
                      endPoint="1"
                      startPoint="0"
                    />
                    <Gradient
                      className="IS21"
                      degrees={267}
                      endPoint="1"
                      startPoint="0"
                    />
                  </_default>
                </div>
              </StyledComponent>
            </card-content__TcCardContainer>
          </div>
        </StyledComponent>
      </tc-view__TcView>
    </div>
  </StyledComponent>
</Animations__FadeIn>
`;

exports[`2. card with reversed loading state 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  border-bottom-color: black;
  border-bottom-width: 0px;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c3 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c4 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  min-width: 100%;
  min-height: 84px;
}

<style>
.IS1 {
  background-image: linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%);
  height: 24px;
  margin-bottom: 10px;
  max-width: 300px;
}

.IS2 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS3 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS4 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
  height: 10px;
  margin-bottom: 10px;
}

.IS5 {
  height: 10;
  margin-bottom: 10px;
}

.IS6 {
  height: 10;
  margin-bottom: 10px;
}

.IS7 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
  height: 10px;
  margin-bottom: 10px;
}

.IS8 {
  height: 10;
  margin-bottom: 10px;
}

.IS9 {
  height: 10;
  margin-bottom: 10px;
}

.IS10 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
  height: 10px;
  margin-bottom: 0px;
  max-width: 240px;
}

.IS11 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS12 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS13 {
  max-width: 25%;
  max-height: 50%;
}

.IS14 {
  max-width: 25%;
  max-height: 50%;
}

.IS15 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS16 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS17 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS18 {
  padding-bottom: 150%;
}

.IS19 {
  flex: 1;
  max-width: 320;
  margin-bottom: 0;
}

.IS20 {
  flex: 1;
  max-width: 320;
  margin-bottom: 0;
}

.IS21 {
  flex: 1;
  max-width: 320;
  margin-bottom: 0;
}

.IS22 {
  align-items: flex-start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
  height: auto;
}

.IS23 {
  align-items: flex-start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
  height: auto;
}

.IS24 {
  align-items: flex-start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
  height: auto;
}
</style>

<Animations__FadeIn>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Animations__FadeIn-w31u4-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:",
            [Function],
            ";border-bottom-color:",
            [Function],
            ";border-bottom-width:",
            [Function],
            ";border-radius:",
            [Function],
            ";overflow:",
            [Function],
            ";height:",
            [Function],
            ";width:",
            [Function],
            ";margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            "animation:",
            Keyframes {
              "id": "sc-keyframes-eMLfYp",
              "inject": [Function],
              "name": "eMLfYp",
              "rules": Array [
                "@-webkit-keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
                "@keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
              ],
              "toString": [Function],
            },
            " 0.3s ease-in-out;",
          ],
        },
        "displayName": "Animations__FadeIn",
        "foldedComponentIds": Array [
          "TsTcView-sc-154dp5w-0",
        ],
        "render": [Function],
        "styledComponentId": "Animations__FadeIn-w31u4-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <tc-view__TcView
        className="IS24"
      >
        <StyledComponent
          className="IS23"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-view__TcView-nuazoi-0",
                "isStatic": true,
                "lastClassName": "c1",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                ],
              },
              "displayName": "tc-view__TcView",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-view__TcView-nuazoi-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c1 IS22"
          >
            <card-content__TcCardContainer
              className=""
              styles={
                Object {
                  "flex": 1,
                  "marginBottom": "10px",
                  "minHeight": 84,
                  "minWidth": "100%",
                }
              }
            >
              <StyledComponent
                className=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "card-content__TcCardContainer-sc-1w0wvq8-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "card-content__TcCardContainer",
                    "foldedComponentIds": Array [
                      "tc-view__TcView-nuazoi-0",
                    ],
                    "render": [Function],
                    "styledComponentId": "card-content__TcCardContainer-sc-1w0wvq8-0",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                styles={
                  Object {
                    "flex": 1,
                    "marginBottom": "10px",
                    "minHeight": 84,
                    "minWidth": "100%",
                  }
                }
              >
                <div
                  className="c2"
                >
                  <_default>
                    <Gradient
                      className="IS3"
                      degrees={264}
                      endPoint="1"
                      startPoint="0"
                    />
                    <Gradient
                      className="IS6"
                      degrees={267}
                      endPoint="1"
                      startPoint="0"
                    />
                    <Gradient
                      className="IS9"
                      degrees={267}
                      endPoint="1"
                      startPoint="0"
                    />
                    <Gradient
                      className="IS12"
                      degrees={267}
                      endPoint="1"
                      startPoint="0"
                    />
                  </_default>
                </div>
              </StyledComponent>
            </card-content__TcCardContainer>
            <tc-view__TcView
              className="IS21"
            >
              <StyledComponent
                className="IS20"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "tc-view__TcView-nuazoi-0",
                      "isStatic": true,
                      "lastClassName": "c1",
                      "rules": Array [
                        "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                      ],
                    },
                    "displayName": "tc-view__TcView",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "tc-view__TcView-nuazoi-0",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1 IS19"
                >
                  <TimesImage
                    aspectRatio={0.6666666666666666}
                    disablePlaceholder={false}
                    fadeImageIn={false}
                    highResSize={800}
                    lowResQuality={null}
                    lowResSize={60}
                    rounded={false}
                    uri="https://img.io/img"
                  />
                </div>
              </StyledComponent>
            </tc-view__TcView>
          </div>
        </StyledComponent>
      </tc-view__TcView>
    </div>
  </StyledComponent>
</Animations__FadeIn>
`;
